# turing_machine

./: CMakeLists.txt  README.md  Tests.cpp  doctest.h  tests.cpp  turingmachine.cpp  turingmachine.h
testFiles/: basic_regular.txt  basic_regular_output.txt  composition.txt  composition2.txt  conditional.txt  conditional_output.txt  loop.txt  loop_output.txt  multitape.txt  regular.txt  tape_graphviz.dot  tape_graphviz.txt
testFiles/input/: basic_regular.txt  composition.txt  conditional.txt  loop.txt  wrong_machine_type.txt
testFiles/output/: composition_output.txt  conditional_output.txt  loop_output.txt
testFiles/tape/: tape.txt  tape_graphviz.dot
turingmachine/: compositionturingmachine.cpp  compositionturingmachine.h  conditionalturingmachine.cpp  conditionalturingmachine.h  doublylinkedlist.hpp  iterationturingmachine.cpp  iterationturingmachine.h  multitapeturingmachine.cpp  multitapeturingmachine.h  regularturingmachine.cpp  regularturingmachine.h  turingmachine.cpp  turingmachine.h  turingmachinefactory.cpp  turingmachinefactory.h
turingmachine/factory/: TuringMachineFactory.cpp  TuringMachineFactory.h  turingmachinefactory.cpp  turingmachinefactory.h
turingmachine/machines/: CompositionTuringMachine.cpp  CompositionTuringMachine.h  ConditionalTuringMachine.cpp  ConditionalTuringMachine.h  IterationTuringMachine.cpp  IterationTuringMachine.h  MultitapeTuringMachine.cpp  MultitapeTuringMachine.h  RegularTuringMachine.cpp  RegularTuringMachine.h  TuringMachine.h  compositionturingmachine.cpp  compositionturingmachine.h  conditionalturingmachine.cpp  (+8 more)
(+32 files in other folders)
